2011-04-25  James Youngman  <jay@gnu.org>

	Avoid assuming Unix semantics for st_nlinks in lndir.
	* testutils/lndir.c (quit): Accept errno argument; include the
	error string in the error message if it is nonzero.  Call vmsg
	instead of calling vfprintf directly.
	(mperror): Accept the errno value as a function argument.
	(vmsg): make a static function.
	(dodir): Eliminate n_dirs subdirectory counter; this is unreliable
	on filesystems which don't have Unix-like semantics for the
	directory link count (for example, ISO9660 on Solaris, VirtualBox
	shared folders on Solaris).  Also word error messages more
	explicitly.

	Avoid retrying link(2) when errno is set to ENOSYS.
	* src/file.cc (atomic_nfs_create): If link(2) fails with ENOSYS,
	there is no point in retrying.

	Bugfix for lndir on OpenSolaris: ignore . and ..
	* testutils/lndir.c (dodir): Ignore . and .. (on systems where
	readdir returns them).

2011-04-24  James Youngman  <jay@gnu.org>
	Tell the user to run "bootstrap" instead of "autogen.sh".
	* README: "autogen.sh" has been replaced by "bootstrap".

	Adopt Automake's "gnits" rules.
	* configure.ac: Use the "gnits" rules.
	* docs/CREDITS: Rename to THANKS to comply with the gnits rules.
	* docs/CREDITS.short.txt: Add missing final newline.

	Modernise configure.ac initialisation.
	* configure.ac: Use the new-style Autoconf/Automake initialisation
	which passes the version number to AC_INIT rather than to
	AM_INIT_AUTOMAKE.

	Update the version number.
	* configure.ac: Update version number to make a distinction
	between the tar file which results form "make dist" and the
	released 1.3.0 tar file.
	* NEWS: Similarly update the version number.

	Fix SF bug #1300722 (prs succeeds even if the SID is not found).
	* tests/prs/wrongsid.sh: New file; tests for "prs -r" when the
	specified SID does not exist.
	* tests/prs/default.sh: New file; tests the default behaviour of
	prs, both with -d and with no options at all.